--- a/profiles.yaml
+++ b/profiles.yaml
@@ -2,7 +2,7 @@
 apiVersion: kubeflow.org/v1beta1
 kind: Profile
 metadata:
-  name: shubham
+  name: shubham-tatvamasi
 spec:
   owner:
     kind: User
